# subspacer

./: .gitignore  Cargo.toml  README.md
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
program/: Cargo.toml
program/src/: builder.rs  guest.rs  lib.rs
registry/: Cargo.toml
registry/src/: main.rs
subs/: Cargo.toml
subs/src/: main.rs
