[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
# zk-vm guest depedencies
spacedb = { git = "https://github.com/spacesprotocol/spacedb.git", branch = "main", default-features = false }
bincode = {  version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive"] }
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "ecdsa"], default_features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# std dependencies (not part of the guest program)
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.5.1", optional = true, features = ["base64", "hex"] }
hex = { version = "0.4.3", optional = true }
sha2 = {  version = "0.10.8", optional = true}
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }

[features]
default = ["std"]
std = ["serde_json", "serde_with", "hex", "sha2", "rand_core"]
