[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1" }
env_logger = "0.11.1"
serde = "1.0"
spacedb = { git = "https://github.com/spacesprotocol/spacedb.git", branch = "main" }
bincode = {  version = "2.0.0-rc.3", features = ["serde"] }
hex = "0.4.3"
rand_core = "0.6.4"
k256 = { version = "0.13", features = ["serde"] }
program = { path = "../program" }
x509-cert = "0.2.5"
ecdsa = "0.16.9"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
serde_json = "1.0.111"
atty = "0.2.14"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
