[package]
name = "subs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
program = { path = "../program" }
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "ecdsa"], default_features = false }
rand_core = "0.6.4"
hex = "0.4.3"
serde_json = "1.0.111"
atty = "0.2"


